Add more vm args.